Fix overlapping between carousel, footer and toc-sidebar
affix has been implement twice on toc-sidebar

- Remove affix declaration on html element.

Issue: #23

--- a/reflow-maven-skin/src/main/resources/css/reflow-skin.css
+++ b/reflow-maven-skin/src/main/resources/css/reflow-skin.css
@@ -203,6 +203,7 @@ a[name]:before {
 /* affix toc aside bar
 */
 #toc-sidebar {
+    margin-top: 10px;
     z-index: 1100;
 }
 
